--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:2N9c4UGda88l4l4n9muryBe9gTBGFp5cuPcaAWb4yhA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
